# unibo-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: version_manager.py
.github/workflows/: ci.yml  dev.yml  lint.yml  publish-dev.yml  publish-release.yml  release.yml  test.yml
src/unibo_toolkit/: __init__.py  exceptions.py  logging.py
src/unibo_toolkit/clients/: __init__.py  http.py
src/unibo_toolkit/enums/: __init__.py  access_type.py  area.py  campus.py  course_type.py  language.py
src/unibo_toolkit/models/: __init__.py  area_info.py  course.py  curriculum.py  timetable.py
src/unibo_toolkit/scrapers/: __init__.py  course.py  subjects.py  timetable.py
src/unibo_toolkit/utils/: __init__.py  custom_logger.py  date_utils.py  parsers.py  subjects_parser.py  timetable_filters.py  timetable_parser.py
tests/: smoke_test.py
