[project]
name = "unibo-toolkit"
version = "0.3.0.dev20260219102109"
description = "Python toolkit for scraping and accessing University of Bologna data"
authors = [
    {name = "Vadym Teliatnyk", email = "vadym.teliatnyk@komo4ek.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "beautifulsoup4>=4.9.0,<5.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "lxml>=4.9.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[dependency-groups]
dev = [
    "black[d]>=24.0.0,<26.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/research
  | \.github
)/
'''

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
